# curry-lang

./: .gitignore  Cargo.toml
language/: Cargo.toml
language/playground/src/: lib.rs  provider.rs  unsafe_hack.rs  wrapper.rs
language/src/: lib.rs
language/src/engine/: mod.rs
language/src/ll_code_gen/: assignment.rs  expression.rs  function_generator.rs  mod.rs
language/src/parser/: ast.rs  curry_pest.rs  errors.rs  grammar.pest  mod.rs  pest_utils.rs  tests.rs
language/src/parser/ast/: errors.rs  mod.rs  statement.rs
language/tests/: engine.rs  lib.rs
language/tests/baseline_tests/: mod.rs
language/tests/baseline_tests/calumni/: calumni.cry  calumni.expected.out
language/tests/baseline_tests/hello_world/: hello_world.cry  hello_world.expected.out
language/tests/baseline_tests/minimal_program/: minimal_program.cry  minimal_program.expected.out
language/tests/baseline_tests/n_statements/: n_statements.cry  n_statements.expected.out
language/tests/baseline_tests/return_values/: return_values.cry
language/tests/lib/resources/: hello_world.cry
