[package]
name = "curry-lang-language"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.1"
pest_derive = "^2.1"
itertools = "0.10.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
failure = "0.1.8"