[package]
name = "curry-lang-language"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.1"
pest_derive = "^2.1"
itertools = "~0.10"
llvm-sys = "^120.2.6"
inkwell = { version = "^0.1.1", features = ["llvm12-0"] }
failure = "^0.1"
thiserror = "^1.0"
anyhow = "^1.0"
derive_more = "0.99.17"